<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.simey.cicysapp.registrarseActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="92dp"
        android:layout_height="18dp"
        android:text="@string/text_View"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.501" />

    <TextView
        android:id="@+id/txtruser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_right"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="textPersonName"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="-10dp"
        app:layout_constraintTop_toBottomOf="@+id/txtruser"
        android:layout_marginStart="@dimen/margin_left"
        app:layout_constraintLeft_toLeftOf="@+id/txtruser"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_marginLeft="@dimen/margin_left" />

    <EditText
        android:id="@+id/editText2"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_right"
        android:ems="10"
        android:hint="@string/emal"
        android:inputType="textPersonName"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintTop_toBottomOf="@+id/txtrcorreo"
        android:layout_marginStart="@dimen/margin_left"
        app:layout_constraintLeft_toLeftOf="@+id/txtrcorreo"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_marginLeft="@dimen/margin_left" />

    <TextView
        android:id="@+id/txtrtel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefono"
        android:layout_marginEnd="@dimen/margin_right"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="@dimen/margin_left"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintTop_toBottomOf="@+id/editText5"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_marginLeft="@dimen/margin_left" />

    <TextView
        android:id="@+id/txtrpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass"
        android:layout_marginEnd="@dimen/margin_right"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="@dimen/margin_left"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_marginLeft="@dimen/margin_left" />

    <TextView
        android:id="@+id/txtrcorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emal"
        android:layout_marginEnd="@dimen/margin_left"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="@dimen/margin_right"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        android:layout_marginRight="@dimen/margin_left"
        android:layout_marginLeft="@dimen/margin_right" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_left"
        android:layout_marginStart="@dimen/margin_right"
        android:layout_marginTop="@dimen/margin_top"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/txtrpass"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtrpass"
        android:layout_marginRight="@dimen/margin_left"
        android:layout_marginLeft="@dimen/margin_right" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_left"
        android:layout_marginStart="@dimen/margin_right"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/telefono"
        android:inputType="phone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/txtrtel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtrtel"
        android:layout_marginRight="@dimen/margin_left"
        android:layout_marginLeft="@dimen/margin_right" />

    <Button
        android:id="@+id/btrcancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="@dimen/margin_right"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText5"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginRight="@dimen/margin_right" />

    <Button
        android:id="@+id/btraceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/aceptar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btrcancelar"
        app:layout_constraintTop_toBottomOf="@+id/editText5"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>
